--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
           </div>
         </div>
         <div class="copyright">
-          <div class="copyright__item">© Copyrights 2017. Shoe Shop by VictorThemes</div>
-          <div class="copyright__item">Contact Us</div>
+          <p class="copyright__item">© Copyrights 2017. Shoe Shop by VictorThemes</p>
+          <p class="copyright__item">Contact Us</p>
         </div>
       </div>      
     </footer><!--/.footer -->
@@ -289,7 +289,7 @@
   <script src="./js/jquery-3.6.0.min.js"></script>
   <script src="./js/slick.min.js"></script>
   <script src="./js/main-slick.js"></script>
-  <!-- <script src="./js/main-burger.js"></script>  -->
+  <script src="./js/main-burger.js"></script> 
   <!-- <script src="./js/main.js"></script> -->
   <!-- <script src="./js/main-counter.js"></script> -->
   <!-- <script src="./js/main-filter.js"></script> -->
